# GenealogicalTree

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  info.yaml
doc/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
image/: CMakeLists.txt  README.md
image/uml/: .gitignore  core.uml  detail_core.def  high_level.def  submodules.uml
mock/: README.md
optimize/: README.md
src/: CMakeLists.txt  README.md  id.h  main.cpp
template/: CMakeLists.txt  Doxyfile.in  README.md  header.tex.in  md_filter.awk.in  version.h.in  version_hardcoded.h.in
test/: README.md
